Allow users to link multiple steam accounts